--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@vueuse/core": "^8.3.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "boxicons": "^2.1.2",
+    "chart.js": "^3.7.1",
     "core-js": "^3.6.5",
     "datatables.net": "^1.11.5",
     "datatables.net-dt": "^1.11.5",
@@ -23,10 +26,12 @@
     "popper.js": "^1.16.1",
     "sweetalert2": "^11.4.8",
     "vue": "^3.0.0",
+    "vue-chartjs": "^4.0.7",
     "vue-loading-overlay": "^5.0.3",
     "vue-router": "^4.0.0-0",
     "vue3-font-awesome": "^1.0.0",
     "vue3-loading-overlay": "*",
+    "vuejs-progress-bar": "^1.2.7",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
